# pyo3-opentelemetry

./: .clippy.toml  .gitignore  3  Cargo.toml  Makefile.toml  README.md  deny.toml  knope.toml
.github/workflows/: checks.yml  deny.yml  example_wheels.yml  prerelease.yml  publish.yml  release.yml
crates/lib/: CHANGELOG.md  Cargo.toml
crates/lib/assets/python/pyo3_opentelemetry/: __init__.pyi
crates/lib/assets/python/pyo3_opentelemetry/layers/: __init__.pyi
crates/lib/assets/python/pyo3_opentelemetry/layers/file/: __init__.pyi
crates/lib/assets/python/pyo3_opentelemetry/layers/otlp/: __init__.pyi
crates/lib/assets/python_stubs/layers/otlp/: __init__.py
crates/lib/assets/python_stubs/layers/py_otlp/: __init__.pyi
crates/lib/assets/python_stubs/subscriber/: __init__.py
crates/lib/src/: lib.rs
crates/lib/src/export/: contextmanager.rs  mod.rs  subscriber.rs
crates/lib/src/export/common/: mod.rs  trace.rs
crates/lib/src/export/export_process/: current_thread_simple.rs  global_batch.rs  global_simple.rs  mod.rs
crates/lib/src/export/layer/: file.rs  mod.rs  otlp.rs  py_otlp.rs
crates/lib/src/export/otlp/: mod.rs
crates/lib/src/export/py_otlp/: mod.rs
crates/lib/src/export/stdout/: mod.rs
crates/lib/src/export/util/: mod.rs  trace.rs  wg.rs
crates/lib/src/tracing_subscriber/: contextmanager.rs  mod.rs  subscriber.rs
crates/lib/src/tracing_subscriber/common/: mod.rs
crates/lib/src/tracing_subscriber/export_process/: background.rs  current_thread_simple.rs  global_batch.rs  global_simple.rs  mod.rs
crates/lib/src/tracing_subscriber/layers/: file.rs  mod.rs  otlp.rs  py_otlp.rs
crates/macros/: CHANGELOG.md  Cargo.toml
crates/macros/src/: lib.rs
crates/opentelemetry/: CHANGELOG.md  Cargo.toml  README.md
crates/opentelemetry-macros/: CHANGELOG.md  Cargo.toml
crates/opentelemetry-macros/src/: lib.rs
crates/opentelemetry/src/: lib.rs
crates/tracing-subscriber/: CHANGELOG.md  Cargo.toml  README.md
crates/tracing-subscriber-build/: CHANGELOG.md  Cargo.toml  README.md
crates/tracing-subscriber-build/assets/python_stubs/: __init__.py
crates/tracing-subscriber-build/assets/python_stubs/common/: __init__.py
crates/tracing-subscriber-build/assets/python_stubs/layers/: __init__.py  __init__.pyi
crates/tracing-subscriber-build/assets/python_stubs/layers/file/: __init__.py
crates/tracing-subscriber-build/assets/python_stubs/layers/otel_otlp/: __init__.py  __init__.pyi
crates/tracing-subscriber-build/assets/python_stubs/layers/otel_otlp_file/: __init__.py  __init__.pyi
crates/tracing-subscriber-build/assets/python_stubs/subscriber/: __init__.py
crates/tracing-subscriber-build/src/: lib.rs
crates/tracing-subscriber-stubs/: Cargo.toml  README.md
crates/tracing-subscriber-stubs/assets/python_stubs/: __init__.pyi
crates/tracing-subscriber-stubs/assets/python_stubs/layers/: __init__.pyi
crates/tracing-subscriber-stubs/assets/python_stubs/layers/file/: __init__.py  __init__.pyi
crates/tracing-subscriber-stubs/assets/python_stubs/layers/otel_file/: __init__.py
crates/tracing-subscriber-stubs/assets/python_stubs/layers/otel_otlp/: __init__.pyi
crates/tracing-subscriber-stubs/assets/python_stubs/layers/otel_otlp_file/: __init__.pyi
crates/tracing-subscriber-stubs/assets/python_stubs/layers/otlp/: __init__.py
crates/tracing-subscriber-stubs/src/: lib.rs
crates/tracing-subscriber/assets/python_stubs/: __init__.py
crates/tracing-subscriber/assets/python_stubs/layers/: __init__.py  __init__.pyi
crates/tracing-subscriber/assets/python_stubs/layers/file/: __init__.pyi
crates/tracing-subscriber/assets/python_stubs/layers/otel_otlp/: __init__.py  __init__.pyi
crates/tracing-subscriber/assets/python_stubs/layers/otel_otlp_file/: __init__.py  __init__.pyi
crates/tracing-subscriber/assets/python_stubs/subscriber/: __init__.py  __init__.pyi
crates/tracing-subscriber/src/: background.rs  common.rs  contextmanager.rs  file.rs  lib.rs  otlp.rs  stubs.rs  subscriber.rs
crates/tracing-subscriber/src/export_process/: background.rs  mod.rs
crates/tracing-subscriber/src/layers/: fmt_file.rs  mod.rs  otel_file.rs  otel_otlp.rs  otel_otlp_file.rs  otlp.rs
docker/: rs-ci.Dockerfile
examples/pyo3-opentelemetry-lib/: .gitignore  .stubtest-allowlist  Cargo.toml  Makefile.toml  README.md  build.rs  mypy.ini  pyproject.toml  spans.txt
examples/pyo3-opentelemetry-lib/pyo3_opentelemetry_lib/: __init__.py  __init__.pyi
examples/pyo3-opentelemetry-lib/pyo3_opentelemetry_lib/_tracing_subscriber/: .stubtest-allowlist  __init__.py  __init__.pyi
examples/pyo3-opentelemetry-lib/pyo3_opentelemetry_lib/_tracing_subscriber/common/: __init__.py  __init__.pyi
examples/pyo3-opentelemetry-lib/pyo3_opentelemetry_lib/_tracing_subscriber/layers/: __init__.py  __init__.pyi
examples/pyo3-opentelemetry-lib/pyo3_opentelemetry_lib/_tracing_subscriber/layers/file/: __init__.py  __init__.pyi
examples/pyo3-opentelemetry-lib/pyo3_opentelemetry_lib/_tracing_subscriber/layers/otel_file/: __init__.py
examples/pyo3-opentelemetry-lib/pyo3_opentelemetry_lib/_tracing_subscriber/layers/otel_otlp/: __init__.py  __init__.pyi
examples/pyo3-opentelemetry-lib/pyo3_opentelemetry_lib/_tracing_subscriber/layers/otel_otlp_file/: __init__.py  __init__.pyi
examples/pyo3-opentelemetry-lib/pyo3_opentelemetry_lib/_tracing_subscriber/layers/otlp/: __init__.py  __init__.pyi
examples/pyo3-opentelemetry-lib/pyo3_opentelemetry_lib/_tracing_subscriber/layers/py_otlp/: __init__.py
examples/pyo3-opentelemetry-lib/pyo3_opentelemetry_lib/_tracing_subscriber/subscriber/: __init__.py  __init__.pyi
examples/pyo3-opentelemetry-lib/pyo3_opentelemetry_lib/test/: __init__.py  conftest.py  propagate_test.py  tracing_test.py
examples/pyo3-opentelemetry-lib/src/: lib.rs
scripts/ci/: assert-macros-crate-published.sh  release.sh
