[workspace]
members = ["crates/*", "examples/*"]
# reference: https://github.com/gakonst/ethers-rs/blob/master/Cargo.toml
resolver = "2"

[workspace.dependencies]
qcs-dependencies-client = { version = "0.3.2" }
pyo3 = { version = "0.29", features = ["macros"] }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
pyo3-build-config = "0.29"
rigetti-pyo3 = { version = "0.7" }
rstest = "0.17.0"
serde = { version = "1.0.145", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.36.0", features = [] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"
futures-core = "0.3.30"
futures-util = "0.3.31"
handlebars = "6.4.0"
once_cell = "1.17.1"
proc-macro2 = "1.0.58"
pyo3-opentelemetry = { path = "crates/opentelemetry" , version = "0.9.0" }
pyo3-opentelemetry-macros = { version = "0.9.0", path = "crates/opentelemetry-macros" }
pyo3-tracing-subscriber = { path = "crates/tracing-subscriber", default-features = false , version = "0.7.0" }
pyo3-tracing-subscriber-build = { path = "crates/tracing-subscriber-build", default-features = false , version = "0.7.0" }
quote = "1.0.26"
serde_json = "1.0.128"
syn = "2.0.14"
