[package]
name = "pyo3-opentelemetry"
version = "0.1.0"
edition = "2021"
categories = ["Python bindings", "OpenTelemetry", "Tracing", "Macros"]
keywords = ["python", "pyo3", "opentelemetry", "tracing"]
license = "Apache-2.0"
readme = "../../README.md"
description = "Macro and utilities for passing OpenTelemetry context from Python to Rust"
repository = "https://github.com/rigetti/pyo3-opentelemetry"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3_opentelemetry"
crate-type = ["lib", "cdylib"]

[dependencies]
futures-core = { version = "0.3.28", optional = true }
once_cell = { version = "1.18.0", optional = true }
opentelemetry = { version = "0.20.0", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.13.0", optional = true }
opentelemetry-proto = { version = "0.3.0", optional = true, features = ["tonic"] }
opentelemetry-stdout = { version = "0.1.0", optional = true, features = ["trace"] }
opentelemetry_api = { version = "0.20.0", optional = true }
opentelemetry_sdk = { version = "0.20.0", optional = true, features = ["rt-tokio-current-thread"] }
pyo3 = { version = "0.19.0", features = [] }
pyo3-asyncio = { version = "0.19.0", optional = true, features = ["tokio-runtime"] }
pyo3-opentelemetry-macros = { path = "../macros", version = "0.1.0" }
rigetti-pyo3 = { version = "0.2.0", optional = true }
thiserror = { version = "1.0.48", optional = true }
tokio = { version = "1.27.0", features = ["rt-multi-thread"] }
tonic = { version = "0.9.2", optional = true }
tracing = { version = "0.1.37", optional = true }
tracing-opentelemetry = { version = "0.21.0", optional = true }
tracing-subscriber = { version = "0.3.17", optional = true }

[dev-dependencies]
futures-util = "0.3.28"
once_cell = "1.17.1"
opentelemetry = { version = "0.20.0", features = ["trace", "rt-tokio"] }
serde = "1.0.188"
serde_json = "1.0.107"
tempfile = "3.8.0"
tokio = { version = "1.27.0", features = ["sync", "parking_lot", "macros"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.21.0"
tracing-subscriber = "0.3.16"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module", "opentelemetry"]
export = [
  "opentelemetry_api",
  "opentelemetry_sdk/rt-tokio-current-thread",
  "pyo3-asyncio/tokio-runtime",
  "tokio/rt-multi-thread",
  "tracing",
  "tracing-opentelemetry",
  "tracing-subscriber",
  "opentelemetry/rt-tokio",
  "thiserror",
  "rigetti-pyo3",
  "once_cell"
]
export-otlp = ["export", "opentelemetry-otlp", "opentelemetry-proto", "tonic", "tracing-subscriber/env-filter"]
export-file = ["export", "opentelemetry-stdout/trace"]
