[package]
name = "pyo3-opentelemetry"
version = "0.1.0"
edition = "2021"
categories = ["Python bindings", "OpenTelemetry", "Tracing", "Macros"]
keywords = ["python", "pyo3", "opentelemetry", "tracing"]
license = "Apache-2.0"
readme = "../../README.md"
description = "Macro and utilities for passing OpenTelemetry context from Python to Rust"
repository = "https://github.com/rigetti/pyo3-opentelemetry"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3_opentelemetry"
crate-type = ["lib", "cdylib"]

[dependencies]
opentelemetry = { version = "0.20.0" }
opentelemetry_api = { version = "0.20.0" }
opentelemetry_sdk = { version = "0.20.0" }
pyo3 = { version = "0.19.0", features = [] }
pyo3-opentelemetry-macros = { path = "../macros", version = "0.1.0" }
rigetti-pyo3 = { version = "0.2.0", optional = true }

[dev-dependencies]
futures-util = "0.3.28"
once_cell = "1.17.1"
opentelemetry = { version = "0.20.0", features = ["trace", "rt-tokio"] }
tokio = { version = "1.27.0", features = ["sync", "parking_lot", "macros"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.21.0"
tracing-subscriber = "0.3.16"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

