[package]
name = "pyo3-opentelemetry-macros"
version = "0.3.1-rc.0"
edition = "2021"
categories = ["Python bindings", "OpenTelemetry", "Tracing", "Macros"]
keywords = ["python", "pyo3", "opentelemetry", "tracing"]
license = "MIT OR Apache-2.0"
readme = "../opentelemetry/README.md"
description = "Macro for passing OpenTelemetry context from Python to Rust"
repository = "https://github.com/rigetti/pyo3-opentelemetry"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.58"
quote = "1.0.26"
syn = { version = "2.0.14", features = ["full", "derive"] }

[dev-dependencies]
rstest = { workspace = true } 
