[package]
name = "pyo3-opentelemetry"
version = "0.3.2-dev.0"
edition = "2021"
categories = ["Python bindings", "OpenTelemetry", "Tracing", "Macros"]
keywords = ["python", "pyo3", "opentelemetry", "tracing"]
license = "Apache-2.0"
readme = "./README.md"
description = "Macro and utilities for passing OpenTelemetry context from Python to Rust"
repository = "https://github.com/rigetti/pyo3-opentelemetry"
rust-version = "1.65.0"

[dependencies]
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
pyo3 = { workspace = true }
pyo3-opentelemetry-macros = { path = "../opentelemetry-macros", version = "0.3.2-dev.0" }

[dev-dependencies]
futures-util = "0.3.28"
once_cell = "1.17.1"
opentelemetry = { workspace = true, features = ["trace"] }
tokio = { workspace = true, features = ["sync", "parking_lot", "macros"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

