[package]
name = "pyo3-tracing-subsciber-stubs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3_tracing_subscriber_stubs"
crate-type = ["lib", "cdylib"]

[dependencies]
handlebars = { version = "4.4.0" }
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.49"

[dev-dependencies]
rstest = "0.18.2"
