[package]
name = "pyo3-tracing-subscriber-stubs"
version = "0.1.0"
edition = "2021"
categories = ["Python bindings", "OpenTelemetry", "Tracing", "Macros"]
keywords = ["python", "pyo3", "opentelemetry", "tracing"]
license = "Apache-2.0"
readme = "../../README.md"
description = "Function for writing Python stubs for the `pyo3-tracing-subscriber` crate."
repository = "https://github.com/rigetti/pyo3-opentelemetry"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3_tracing_subscriber_stubs"
crate-type = ["lib", "cdylib"]

[dependencies]
handlebars = { version = "4.4.0" }
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.49"

[dev-dependencies]
rstest = "0.18.2"
