[package]
name = "pyo3-tracing-subscriber"
version = "0.4.0"
edition = "2021"
categories = ["development-tools::ffi", "development-tools::profiling"]
keywords = ["python", "pyo3", "opentelemetry", "tracing"]
license = "Apache-2.0"
readme = "./README.md"
description = "A Python module for configuring and initializing tracing subscribers from Python."
repository = "https://github.com/rigetti/pyo3-opentelemetry"
rust-version = "1.83.0"

[dependencies]
handlebars = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
qcs-dependencies-client = { workspace = true }
# These packages *MUST* be kept in sync with the OTEL package versions; but
# since they are optional, they cannot be workspace dependencies.
# opentelemetry-otlp: grpc-tonic and tls-roots features provided by qcs-dependencies-client
opentelemetry-otlp = { workspace = true, features = ["trace"], optional = true }
opentelemetry-proto = { workspace = true, features = ["tonic"], optional = true }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "rt-tokio-current-thread"] }
pyo3-async-runtimes = { workspace = true, features = ["tokio-runtime"], optional = true }
rigetti-pyo3 = { workspace = true, features = [ "async-tokio", "opentelemetry" ] }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
futures-core = { workspace = true }
serde_json = { workspace = true }

[features]
layer-otel-otlp = ["layer-otel-otlp-file", "qcs-dependencies-client/grpc"]
layer-otel-otlp-file = ["dep:opentelemetry-otlp", "dep:opentelemetry-proto"]
stubs = ["dep:handlebars"]
pyo3 = ["dep:pyo3", "dep:pyo3-async-runtimes"]
default = ["pyo3"]

[dev-dependencies]
rstest = { workspace = true }
