[package]
name = "pyo3-tracing-subscriber"
version = "0.5.0-rc.1"
edition = "2021"
categories = ["development-tools::ffi", "development-tools::profiling"]
keywords = ["python", "pyo3", "opentelemetry", "tracing"]
license = "Apache-2.0"
readme = "./README.md"
description = "A Python module for configuring and initializing tracing subscribers from Python."
repository = "https://github.com/rigetti/pyo3-opentelemetry"
rust-version = "1.88.0"

[dependencies]
pyo3 = { workspace = true }
qcs-dependencies-client = { workspace = true, features = ["grpc", "tokio-current-thread"] }
pyo3-async-runtimes = { workspace = true, features = ["tokio-runtime"] }
rigetti-pyo3 = { workspace = true, features = [ "async-tokio", "opentelemetry" ] }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
futures-core = { workspace = true }
serde_json = { workspace = true }

[features]
layer-otel-otlp = []
layer-otel-otlp-file = []

[dev-dependencies]
rstest = { workspace = true }
