[package]
name = "pyo3-opentelemetry-lib"
version = "0.1.0"
edition = "2021"
categories = ["test", "Python bindings", "OpenTelemetry", "Tracing", "Macros"]
keywords = ["python", "pyo3", "opentelemetry", "tracing"]
license = "MIT OR Apache-2.0"
readme = "../../README.md"
description = "Integration test for `pyo3-opentelemetry`"
repository = "https://github.com/rigetti/pyo3-opentelemetry"
rust-version = "1.65.0"
publish = false
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3_opentelemetry_lib"
crate-type = ["cdylib", "lib"]

[dependencies]
opentelemetry = "0.20.0"
opentelemetry_api = "0.20.0"
opentelemetry_sdk = "0.20.0"
pyo3 = { version = "0.19.0" }
pyo3-asyncio = { version = "0.19.0", features = ["tokio", "tokio-runtime"] }
pyo3-opentelemetry = { path = "../../crates/lib", features = ["export-file", "export-otlp"], default-features = false }
tokio = { version = "1.27.0", features = ["sync", "parking_lot", "macros"] }
tracing = "0.1.37"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

