[package]
name = "pyo3-opentelemetry-lib"
version = "0.1.0"
edition = "2021"
categories = ["test", "Python bindings", "OpenTelemetry", "Tracing", "Macros"]
keywords = ["python", "pyo3", "opentelemetry", "tracing"]
license = "MIT OR Apache-2.0"
readme = "../../README.md"
description = "Integration test for `pyo3-opentelemetry`"
repository = "https://github.com/rigetti/pyo3-opentelemetry"
rust-version = "1.65.0"
publish = false
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3_opentelemetry_lib"
crate-type =  ["cdylib", "rlib"]

[dependencies]
opentelemetry = "0.23.0"
opentelemetry_sdk = "0.23.0"
pyo3 = { workspace = true }
pyo3-asyncio = { workspace = true, features = ["tokio", "tokio-runtime"] }
pyo3-opentelemetry = { path = "../../crates/opentelemetry" }
pyo3-tracing-subscriber = { path = "../../crates/tracing-subscriber", features = ["layer-otel-otlp-file", "layer-otel-otlp"] }
tokio = { version = "1.27.0", features = ["sync", "parking_lot", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"], optional = true }

[features]

[build-dependencies]
pyo3-tracing-subscriber = { path = "../../crates/tracing-subscriber", features = ["layer-otel-otlp-file", "layer-otel-otlp", "stubs"] }
pyo3-build-config.workspace = true

