[package]
name = "pyo3-opentelemetry-lib"
version = "0.1.0"
edition = "2021"
categories = ["development-tools::ffi", "development-tools::profiling"]
keywords = ["python", "pyo3", "opentelemetry", "tracing"]
license = "MIT OR Apache-2.0"
readme = "../../README.md"
description = "Integration test for `pyo3-opentelemetry`"
repository = "https://github.com/rigetti/pyo3-opentelemetry"
rust-version = "1.91.0"
publish = false
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3_opentelemetry_lib"
crate-type =  ["cdylib", "rlib"]

[dependencies]
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
pyo3 = { workspace = true }
pyo3-async-runtimes = { workspace = true, features = ["tokio", "tokio-runtime"] }
pyo3-opentelemetry = { path = "../../crates/opentelemetry" }
pyo3-tracing-subscriber = { path = "../../crates/tracing-subscriber", features = ["layer-otel-otlp-file", "layer-otel-otlp"] }
tokio = { workspace = true, features = ["sync", "parking_lot", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }

[features]

[build-dependencies]
pyo3-tracing-subscriber = { path = "../../crates/tracing-subscriber", features = ["layer-otel-otlp-file", "layer-otel-otlp", "stubs"], default-features = false }
pyo3-build-config.workspace = true

